# xc-ros

./: .gitignore  CMakeLists.txt  README.md
common/: package.xml  xcroscommon.h
robotrpcpp/: CMakeLists.txt  build.sh  client.cpp  main.cpp  server.cpp
robotrpcpp/include/: RobotRpc.h  RobotRpcClient.h  RobotRpcDecl.h  RobotRpcDispatch.h  RobotRpcException.h  RobotRpcServer.h  RobotRpcServerConnection.h  RobotRpcServerMethod.h  RobotRpcSocket.h  RobotRpcSocketSource.h  RobotRpcUtil.h  XmlRpcValue.h
robotrpcpp/protorpc/: CMakeLists.txt  protoTest.cpp
robotrpcpp/simple-test/: CMakeLists.txt  HelloClient.cpp  HelloServer.cpp  TestBase64Client.cpp  TestBase64Server.cpp
robotrpcpp/src/: CMakeLists.txt  RobotRpcClient.cpp  RobotRpcDispatch.cpp  RobotRpcServer.cpp  RobotRpcServerConnection.cpp  RobotRpcServerMethod.cpp  RobotRpcSocket.cpp  RobotRpcSocketSource.cpp  RobotRpcUtil.cpp  XmlRpcValue.cpp
robotrpcpp/src/protorpc/: CMakeLists.txt  rpc.proto
src/: BUILD.rosdep  CMakeLists.txt  WORKSPACE
src/catkin/: .tar
src/cmake_modules/: .tar
src/common/: BUILD  CMakeLists.txt  package.xml
src/gencpp/: .tar
src/gencpp/scripts/: msg.h.template  srv.h.template
src/geneus/: .tar
src/genlisp/: .tar
src/genmsg/: .tar
src/gennodejs/: .tar
src/genpy/: .tar
src/message_generation/: .tar
src/message_runtime/: .tar
src/robotrpcpp/: BUILD  CMakeLists.txt  package.xml
src/robotrpcpp/include/rpcpp/: RobotRpc.h  RobotRpcClient.h  RobotRpcDispatch.h  RobotRpcException.h  RobotRpcServer.h  RobotRpcServerConnection.h  RobotRpcServerMethod.h  RobotRpcSocket.h  RobotRpcSocketSource.h  RobotRpcUtil.h  XmlRpcValue.h
src/robotrpcpp/protorpc/: CMakeLists.txt  protoTest.cpp  sudoku.proto
src/robotrpcpp/simple-test/: CMakeLists.txt  HelloClient.cpp  HelloServer.cpp  TestBase64Client.cpp  TestBase64Server.cpp
src/robotrpcpp/src/: RobotRpcClient.cpp  RobotRpcDispatch.cpp  RobotRpcServer.cpp  RobotRpcServerConnection.cpp  RobotRpcServerMethod.cpp  RobotRpcSocket.cpp  RobotRpcSocketSource.cpp  RobotRpcUtil.cpp  XmlRpcValue.cpp
src/ros/mk/: .tar
src/ros/ros/: .tar
src/ros/rosbash/: .tar
src/ros/rosboost_cfg/: .tar
src/ros/rosbuild/: .tar
src/ros/rosclean/: .tar
src/ros/roscreate/: .tar
src/ros/roslang/: .tar
src/ros/roslib/: .tar  mainpage.dox
src/ros/rosmake/: .tar
src/ros/rosunit/: .tar
src/ros_comm_msgs/rosgraph_msgs/: .tar
src/ros_comm_msgs/std_srvs/: .tar
src/rosconsole/: BUILD  CMakeLists.txt  package.xml
src/std_msgs/: BUILD
src/std_msgs/roscpp/: Empty.h  EmptyRequest.h  EmptyResponse.h  GetLoggers.h  GetLoggersResponse.h  SetLoggerLevelRequest.h  SetLoggerLevelResponse.h
src/std_msgs/rosgraph_msgs/: Clock.h  TopicStatistics.h
src/std_msgs/std_msgs/: Duration.h  Header.h  Int16MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  Time.h  UInt32.h  UInt32MultiArray.h  UInt64MultiArray.h  UInt8.h  header_deprecated_def.h
src/xcroscpp/: BUILD  CMakeLists.txt  mm_package.xml  package.xml
src/xcroscpp/include/: boost_161_condition_variable.h
src/xcroscpp/samples/: CMakeLists.txt  talk.cpp
src/xcroscpp/src/: CMakeLists.txt  file_log.cpp  intraprocess_publisher_link.cpp  network.cpp  poll_manager.cpp  publication.cpp  service_client_link.cpp  single_subscriber_publisher.cpp  statistics.cpp
src/xcroscpp_core/: BUILD
src/xcroscpp_core/roscpp_serialization/: package.xml
src/xcroscpp_core/rostime/: CMakeLists.txt
std_msgs/: package.xml
std_msgs/roscpp/: SetLoggerLevel.h
std_msgs/rosgraph_msgs/: Log.h
std_msgs/std_msgs/: Bool.h  Byte.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Empty.h  Float32.h  Float32MultiArray.h  Float64.h  Float64MultiArray.h  Int16.h  Int32.h  Int32MultiArray.h  Int64.h  Int64MultiArray.h  Int8.h  Int8MultiArray.h  String.h  UInt16.h  UInt16MultiArray.h  UInt64.h  UInt8MultiArray.h  builtin_string.h
xcrosconsole/: package.xml
xcrosconsole/include/ros/: assert.h  console.h  console_backend.h  static_assert.h
xcrosconsole/include/rosconsole/: macros_generated.h
xcroscpp/: CMakeLists.txt  package.xml
xcroscpp/include/: callback_queue.h  callback_queue_interface.h  exceptions.h  file_log.h  forwards.h  io.h  names.h  network.h  poll_manager.h  poll_set.h  robotrpc_manager.h  rosout_appender.h  this_node.h  xcroscpp_common.h
xcroscpp/include/ros/: advertise_options.h  callback_queue_interface.h  connection.h  connection_manager.h  forwards.h  init.h  internal_timer_manager.h  intraprocess_publisher_link.h  intraprocess_subscriber_link.h  io.h  message.h  names.h  network.h  parameter_adapter.h  poll_manager.h  poll_set.h  publication.h  publisher.h  publisher_link.h  robotrpc_manager.h  rosout_appender.h  service.h  service_client.h  service_client_link.h  service_client_options.h  service_manager.h  service_server_link.h  steady_timer.h  steady_timer_options.h  subscriber_link.h  this_node.h  (+7 more)
xcroscpp/src/: CMakeLists.txt  callback_queue.cpp  connection.cpp  file_log.cpp  internal_timer_manager.cpp  intraprocess_publisher_link.cpp  names.cpp  network.cpp  poll_manager.cpp  publisher.cpp  robotrpc_manager.cpp  rosout_appender.cpp  service.cpp  service_manager.cpp  service_publication.cpp  service_server_link.cpp  statistics.cpp  this.node.cpp  topic.cpp  topic_manager.cpp  xcroscpp_common.cpp
xcroscpp_core/: CMakeLists.txt
xcroscpp_core/cpp_common/: CMakeLists.txt  package.xml
xcroscpp_core/cpp_common/include/ros/: cpp_common_decl.h  datatypes.h  exception.h  platform.h  types.h
xcroscpp_core/roscpp_serialization/include/ros/: roscpp_serialization_macros.h  serialization.h  serialized_message.h
xcroscpp_core/roscpp_serialization/src/: CMakeLists.txt  serialization.cpp
xcroscpp_core/roscpp_traits/: package.xml
xcroscpp_core/roscpp_traits/include/ros/: builtin_message_traits.h  message_event.h  message_operations.h  message_traits.h  service_traits.h
xcroscpp_core/rostime/: package.xml
xcroscpp_core/rostime/include/ros/: duration.h  rostime_decl.h  time.h
xcroscpp_core/rostime/include/ros/impl/: time.h
xcroscpp_core/rostime/src/: CMakeLists.txt  duration.cpp  rate.cpp  time.cpp
(+115 files in other folders)
