<package format="2">
  <name>robotrpcpp</name>
  <version>1.13.7</version>
  <description>
    XmlRpc++ is a C++ implementation of the XML-RPC protocol. This version is
    heavily modified from the package available on SourceForge in order to
    support roscpp's threading model. As such, we are maintaining our
    own fork.
  </description>
  <maintainer email="xuchen@163.com">Xu Chen</maintainer>
  <license>BSD</license>

  <url>http://xmlrpcpp.sourceforge.net</url>
  <author>Xu Chen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cpp_common</depend>
  <depend version_gte="0.6.9">rostime</depend>

  <test_depend>boost</test_depend>

  <export>
    <rosdoc external="http://xmlrpcpp.sourceforge.net/doc/hierarchy.html"/>
  </export>
</package>
